tests/paczka1/fuzzy1/70056735.err
Error in line 5: 5DsFL1 A917 62,9
Error in line 33: nf6koe S416 33,81
Error in line 32: nf6koe S416 75,3
